--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,8 @@ dependencies {
 	testImplementation 'org.springframework.security:spring-security-test'
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 	implementation 'mysql:mysql-connector-java:8.0.23'
+
+	implementation group: 'com.auth0', name: 'java-jwt', version: '4.3.0'
 }
 
 tasks.named('test') {
