--- a/build.gradle
+++ b/build.gradle
@@ -32,15 +32,9 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
+	implementation 'mysql:mysql-connector-java:8.0.23'
 
 	implementation group: 'com.auth0', name: 'java-jwt', version: '4.3.0'
-	implementation 'org.springframework.boot:spring-boot-starter-mail'
-	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
-	implementation 'org.mariadb.jdbc:mariadb-java-client'
-
-
-	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
-	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
 }
 
 tasks.named('test') {
