--- a/build.gradle
+++ b/build.gradle
@@ -32,9 +32,10 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
-	implementation 'mysql:mysql-connector-java:8.0.23'
 
+	implementation 'mysql:mysql-connector-java:8.0.23'
 	implementation group: 'com.auth0', name: 'java-jwt', version: '4.3.0'
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 }
 
 tasks.named('test') {
