--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
 
+	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb' // mongoDB
 	implementation 'mysql:mysql-connector-java:8.0.33'
 	implementation group: 'com.auth0', name: 'java-jwt', version: '4.3.0'
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
