--- a/build.gradle
+++ b/build.gradle
@@ -49,6 +49,10 @@ dependencies {
 
 	implementation 'org.springframework.boot:spring-boot-starter-amqp'
 	implementation 'org.springframework.boot:spring-boot-starter-websocket'
+
+	// LocalDateTime을 직열화 하기 위해 필요
+	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
+	implementation 'com.fasterxml.jackson.core:jackson-databind'
 }
 
 tasks.named('test') {
