--- a/build.gradle
+++ b/build.gradle
@@ -34,25 +34,39 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
 
-	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb' // mongoDB
+	// mongoDB
+	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
 	implementation 'mysql:mysql-connector-java:8.0.33'
+
+	// Oauth
 	implementation group: 'com.auth0', name: 'java-jwt', version: '4.3.0'
-	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
-	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 
-	//Querydsl 추가
+	// Redis
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+
+	// Webflux
+	implementation 'org.springframework.boot:spring-boot-starter-webflux'
+
+	//Querydsl
 	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
 	annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
 	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
 	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 
+	// RabbitMQ
 	implementation 'org.springframework.boot:spring-boot-starter-amqp'
+
+	// WebSocket
 	implementation 'org.springframework.boot:spring-boot-starter-websocket'
 
 	// LocalDateTime을 직열화 하기 위해 필요
 	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
 	implementation 'com.fasterxml.jackson.core:jackson-databind'
+
+	// AWS
+	implementation 'com.amazonaws:aws-java-sdk-s3:1.12.638'
+	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
 }
 
 tasks.named('test') {
