--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,8 @@ dependencies {
 
 	// mongoDB
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
+
+	// MySQL
 	implementation 'mysql:mysql-connector-java:8.0.33'
 
 	// Oauth
