fix: 메시지 전송 시 messageId를 반환하도록 변경

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 .DS_Store
 **/application.properties
+**/application-local.properties
+**/application-deploy.properties
 
 HELP.md
 .gradle
@@ -7,8 +9,6 @@ build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
-src/main/resources/application-secret.yml
-src/main/resources/application.yml
 
 
 ### IntelliJ IDEA ###
