--- a/FastAPI/Dockerfile
+++ b/FastAPI/Dockerfile
@@ -10,8 +10,14 @@ COPY ./requirements.txt /project/requirements.txt
 # 의존성 설치
 RUN pip install --no-cache-dir --upgrade -r /project/requirements.txt
 
+# .env 파일 복사
+COPY ./app/.env /project/app/.env
+
 # 나머지 파일 복사
 COPY ./app /project/app
+
+# 환경 변수 설정
+ENV PYTHONPATH=/project
 
 # 애플리케이션 실행
 CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
