fix: docker-compose.yml에 MySQL 한국 시간 설정을 하는 설정 추가

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,7 @@ services:
     ports:
       - "3306:3306"
     environment:
+        TZ: Asia/Seoul
         MYSQL_HOST: mysql
         MYSQL_PORT: 3306
         MYSQL_ROOT_PASSWORD: 0623
