--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,10 @@ services:
     container_name: mongo
     ports:
       - "27017:27017"
+    environment:
+      TZ: Asia/Seoul
+    volumes:
+      - /home/ubuntu/volumes/mongo:/data/db
     networks:
       - network
 
@@ -32,7 +36,7 @@ services:
         MYSQL_ROOT_PASSWORD: 0623
         MYSQL_DATABASE: ForPaw
     volumes:
-      - /Users/lhh/ForPaw_BE/volume:/var/lib/mysql
+      - /home/ubuntu/volumes/mysql:/var/lib/mysql
     networks:
       - network
 
