--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -11,6 +11,8 @@ http {
     sendfile        on;
     keepalive_timeout  65;
 
+    proxy_cache_path /var/cache/nginx levels=1:2 keys_zone=my_cache:10m max_size=1g inactive=360m use_temp_path=off;
+
     upstream next-server {
         server react:3000;
     }
@@ -24,7 +26,12 @@ http {
         server_name 54.180.244.93; # EC2 IP 주소
 
         location / {
-            proxy_pass http://next-server;
+            proxy_cache my_cache;
+            proxy_cache_valid 200 6h;
+            proxy_cache_bypass $http_cache_control;
+            proxy_no_cache $http_cache_control;
+
+	    proxy_pass http://next-server;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
