feat: HTTPS 사용을 위한 설정 추가

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -23,7 +23,26 @@ http {
 
     server {
         listen 80;
-        server_name 54.180.244.93; # EC2 IP 주소
+        server_name www.forpaw.site;
+
+        location ~ /.well-known/acme-challenge {
+            allow all;
+            root /usr/share/nginx/html;
+        }
+
+        location / {
+            return 301 https://$host$request_uri;
+        }
+    }
+
+    server {
+        listen 443 ssl;
+        server_name www.forpaw.site;
+
+        ssl_certificate /etc/letsencrypt/live/www.forpaw.site/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/www.forpaw.site/privkey.pem;
+        include /etc/letsencrypt/options-ssl-nginx.conf;
+        ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
         location / {
             proxy_cache my_cache;
@@ -31,7 +50,8 @@ http {
             proxy_cache_bypass $http_cache_control;
             proxy_no_cache $http_cache_control;
 
-	    proxy_pass http://next-server;
+            proxy_pass http://next-server;
+            proxy_redirect off;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -43,6 +63,7 @@ http {
 
         location /api {
             proxy_pass http://spring;
+            proxy_redirect off;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -50,4 +71,3 @@ http {
         }
     }
 }
-
