--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,12 +55,25 @@ services:
     networks:
       - network
 
-  nginx_proxy:
+  nginx:
     image: nginx:1.21.5-alpine
     container_name: nginx
     ports:
       - "80:80"
+      - "443:443"
     volumes:
-      - /home/ubuntu/nginx:/etc/nginx/nginx.conf
+      - /home/ubuntu/nginx/nginx.conf:/etc/nginx/nginx.conf
+      - /home/ubuntu/certbot-etc:/etc/letsencrypt
+      - /home/ubuntu/myweb:/usr/share/nginx/html
     networks:
       - network
+
+  certbot:
+    depends_on:
+      - nginx
+    image: certbot/certbot
+    container_name: certbot
+    volumes:
+      - /home/ubuntu/certbot-etc:/etc/letsencrypt
+      - /home/ubuntu/myweb:/usr/share/nginx/html
+    command: certonly --webroot --webroot-path=/usr/share/nginx/html --email ygsdfsd@pusan.ac.kr --agree-tos --no-eff-email --keep-until-expiring -d www.forpaw.site
