--- a/build.gradle
+++ b/build.gradle
@@ -73,6 +73,9 @@ dependencies {
 
 	// Thymeleaf
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+
+	// Jsoup
+	implementation 'org.jsoup:jsoup:1.15.3'
 }
 
 sonarqube {
