--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,24 @@
-version: '3.8'
 networks:
   network:
     driver: bridge
 
 services:
+  spring:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: spring
+    ports:
+      - "8080:8080"
+    networks:
+      - network
+    depends_on:
+      - mysql
+      - mongo
+      - redis
+      - rabbitmq
+#      - nginx
+
   redis:
     image: "redis:7.0"
     container_name: redis
@@ -20,7 +35,8 @@ services:
     environment:
       TZ: Asia/Seoul
     volumes:
-      - /home/ubuntu/volumes/mongo:/data/db
+      - /var/lib/volumes/mongo:/data/db
+#      - /home/ubuntu/volumes/mongo:/data/db
     networks:
       - network
 
@@ -36,7 +52,8 @@ services:
         MYSQL_ROOT_PASSWORD: 0623
         MYSQL_DATABASE: ForPaw
     volumes:
-      - /home/ubuntu/volumes/mysql:/var/lib/mysql
+      - /var/lib/volumes/mysql:/var/lib/mysql
+#      - /home/ubuntu/volumes/mysql:/var/lib/mysql
     networks:
       - network
 
@@ -55,18 +72,18 @@ services:
     networks:
       - network
 
-  nginx:
-    image: nginx:1.21.5-alpine
-    container_name: nginx
-    ports:
-      - "80:80"
-      - "443:443"
-    volumes:
-      - /home/ubuntu/nginx/nginx.conf:/etc/nginx/nginx.conf
-      - /home/ubuntu/certbot-etc:/etc/letsencrypt
-      - /home/ubuntu/myweb:/usr/share/nginx/html
-    networks:
-      - network
+#  nginx:
+#    image: nginx:1.21.5-alpine
+#    container_name: nginx
+#    ports:
+#      - "80:80"
+#      - "443:443"
+#    volumes:
+#      - /home/ubuntu/nginx/nginx.conf:/etc/nginx/nginx.conf
+#      - /home/ubuntu/certbot-etc:/etc/letsencrypt
+#      - /home/ubuntu/myweb:/usr/share/nginx/html
+#    networks:
+#      - network
 
 #  certbot:
 #    depends_on:
