refactor: AnimalService의 updateAnimalData() 메서드 가독성 개선을 위해 세부 로직별로 쪼개서 메서드 추출

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -72,6 +72,18 @@ services:
     networks:
       - network
 
+  fastapi:
+    build:
+      context: ./FastAPI
+      dockerfile: Dockerfile
+    container_name: fast
+    ports:
+      - "8000:8000"
+    networks:
+      - network
+    depends_on:
+      - spring
+
 #  nginx:
 #    image: nginx:1.21.5-alpine
 #    container_name: nginx
