refactor: AnimalService의 convertHttpUrlToHttps() 메서드를 역할 책임상 UriUtils 클래스로 이동

--- a/build.gradle
+++ b/build.gradle
@@ -76,6 +76,9 @@ dependencies {
 
 	// Jsoup
 	implementation 'org.jsoup:jsoup:1.15.3'
+
+	// Apache Commons Lang
+	implementation 'org.apache.commons:commons-lang3:3.12.0'
 }
 
 sonarqube {
