fix: 구조 변경에 따른 Repository의 쿼리문 변경 수정

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 .DS_Store
 **/application.properties
-**/application-local.properties
-**/application-deploy.properties
+**/application-prod.properties
+**/application-dev.properties
+logs/
 
 HELP.md
 .gradle
